--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.4",
+    "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.1.1",
     "tslint": "^6.1.2",
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@types/node": "^14.0.14"
+    "@types/lodash": "^4.14.157",
+    "@types/node": "^14.0.14",
+    "lodash": "^4.17.19",
+    "react": "^16.13.1"
   }
 }
