--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@types/jest": "^26.0.4",
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
+    "lodash": "^4.17.19",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.1",
+    "ts-loader": "^8.0.0",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.14",
-    "lodash": "^4.17.19",
     "react": "^16.13.1"
   }
 }
