--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "test": "jest src",
+    "test": "jest",
     "watch": "webpack --watch",
     "build": "webpack"
   },
